[package]
name = "advent_of_code_2025"
version = "0.1.0"
edition = "2021"

[profile.release]
#debug = false
lto = true
#panic = "abort"
codegen-units = 1

[dependencies]
itertools = "0.14.0"
ndarray = "0.17.1"
nom = "8.0.0"
#num = "0.4.0"
once_cell = "1.21.3"
regex = "1.12.2"
# intervallum = "1.4.0"
# gcollections = "1.5.0"
lazy_static = "1.5.0"
rayon = "1.11.0"
rustc-hash = "2.1.1"
z3 = { git = "https://github.com/prove-rs/z3.rs", rev = "4f9fcfe43ff2c78aadfaf57c4fab1f7cbe4aa8a8" }
pathfinding = "4.14.0"
